RESOLVED FIXED 271961
WebCore::ViewportErrorCode should be an enum class
https://bugs.webkit.org/show_bug.cgi?id=271961
Summary WebCore::ViewportErrorCode should be an enum class
Abrar Rahman Protyasha
Reported Monday, April 1, 2024 1:22:45 PM UTC
.
Attachments
Radar WebKit Bug Importer
Comment 1 Monday, April 1, 2024 1:22:53 PM UTC
Abrar Rahman Protyasha
Comment 2 Monday, April 1, 2024 2:05:44 PM UTC
EWS
Comment 3 Tuesday, April 2, 2024 12:46:25 AM UTC
Committed 276912@main (866aeddf322d): <https://commits.webkit.org/276912@main> Reviewed commits have been landed. Closing PR #26673 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.