WebCore::ViewportErrorCode should be an enum class https://bugs.webkit.org/show_bug.cgi?id=271961 rdar://125713140

Reviewed by Sihui Liu.

This patch mechnically transforms ViewportErrorCode to an enum class.

* Source/WebCore/dom/ViewportArguments.cpp:
(WebCore::numericPrefix):
(WebCore::findScaleValue):
(WebCore::parseViewportFitValue):
(WebCore::viewportErrorMessageTemplate):

Use a switch statement instead of mapping the enum cases to array
entries. This is also never slower than the status quo, which is a win.

(WebCore::viewportErrorMessageLevel):
(WebCore::viewportErrorMessage):
(WebCore::setViewportFeature):
* Source/WebCore/dom/ViewportArguments.h:

Canonical link: https://commits.webkit.org/276912@main